--- a/index.html
+++ b/index.html
@@ -17,11 +17,26 @@
 
     <div class="banner">
         <div class="banner-overlay">
-            <!-- content goes here !-->
+            <!--content-->
         </div>
     </div>
+
+    <h1 class="textbox"> Come find us! </h1>
+    <h5 class="textbox1" style="margin-top: -10px"> @ Masonville Place </h5>
+    <h5 class="textbox1" style="margin-top: -20px"> London, ON </h5>
+
+    <div class="contactUs">
+        <img src="./images/contact.png">
+    </div>
+
+    <h6 class="textbox2"> (C)Big Orange London, Designed by Diane! </h6>
+
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="main.js"></script>
+
+
+
 </body>
 
 </html>
