--- a/index.html
+++ b/index.html
@@ -3,13 +3,17 @@
 <head>
     <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
+    <link rel="icon" href="./images/orangelogo.png">
+    <title> Big Orange London </title>
 </head>
 
 <body>
     <div class="header">
         <ul class="header-list">
-            <li> <b>Home</b></li>
-            <li> <b>Menu</b></li>
+            <li> <a href="index.html"><b> Home</b> </a></li>
+            <li>
+                <a href="menu.html"> <b>Menu </b> </a>
+            </li>
             <li class="logo"><img src="logo.png" /></li>
             <li class="contact-item"> <b>Contact</b></li>
         </ul>
