--- a/home.html
+++ b/home.html
@@ -3,6 +3,7 @@
 <head>
     <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 </head>
 
 <body>
