--- a/menu.html
+++ b/menu.html
@@ -4,6 +4,7 @@
     <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
     <link rel="icon" href="./images/orangelogo.png">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title> Big Orange London </title>
 </head>
 
@@ -19,15 +20,17 @@
             </ul>
         </div>
 
-        <div class="bbt" style="background-image: url(images/bbt.png)">
-            <div class="bbt-overlay"> </div>
-            <h2> Milk Bubble Tea:
-            </h2>
+        <div class="bbt">
+            <div class="bbt-overlay">
+                <!-- Remember to put it in the overlay, not just to create it! !-->
+                <h2 class="menu-item-title"> Milk Bubble Tea:</h2>
+                <div class="menu-item-content">
+                    <!-- Remember that bold is not <br>! it's <b>! !-->
+                    <p> <b> Regular: 4.99 </b></p>
+                    <p> <b> Kids: 3.99 </b></p>
+                </div>
+            </div>
 
-            <p style="margin-top: 50px;"> <br> Regular: 4.99 </br>
-            </p>
-            <p style="margin-top: 50px;"> <br> Kids: 3.99 </br>
-            </p>
 
 
         </div>
