--- a/menu.html
+++ b/menu.html
@@ -23,11 +23,35 @@
         <div class="bbt">
             <div class="bbt-overlay">
                 <!-- Remember to put it in the overlay, not just to create it! !-->
-                <h2 class="menu-item-title"> Milk Bubble Tea:</h2>
+                <h1 class="menu-item-title"> MILK TEA:</h1>
                 <div class="menu-item-content">
                     <!-- Remember that bold is not <br>! it's <b>! !-->
-                    <p> <b> Regular: 4.99 </b></p>
-                    <p> <b> Kids: 3.99 </b></p>
+
+                    <h4 class="menu-bar"> Regular: 4.99 </h4>
+                    <p> <b> Original Milk Black Tea </b> </p>
+                    <p> <b> Jasmine Milk Green Tea </b> </p>
+                    <p> <b> Taro </b> </p>
+                    <p> <b> Coffee </b> </p>
+                    <p> <b> Coconut </b> </p>
+                    <p> <b> Chocolate </b> </p>
+                    <p> <b> Strawberry </b> </p>
+                    <p> <b> Honey </b> </p>
+                    <p> <b> Honeydew </b> </p>
+
+                    <h1 style="margin-top: 50px;" class="menu-item-title"> FRUIT TEA:</h1>
+                    <h4 class="menu-bar"> Regular: 4.49, Kids: 3.49 </h4>
+                    <p> <b> Jasmine Green </b> </p>
+                    <p> <b> Honey </b> </p>
+                    <p> <b> Mango </b> </p>
+                    <p> <b> Lychee </b> </p>
+                    <p> <b> Green Apple </b> </p>
+                    <p> <b> Passionfruit </b> </p>
+                    <p> <b> Peach </b> </p>
+                    <p> <b> Lemon </b> </p>
+                    <p> <b> Passionfruit & Lemon </b> </p>
+                    <p> <b> Peach & Lemon </b> </p>
+
+                    <h5> <i> all fruit tea flavours are available with Green or Black tea base. </i></h5>
                 </div>
             </div>
 
