--- a/menu.html
+++ b/menu.html
@@ -11,10 +11,12 @@
 <body>
     <div class="header">
         <div class="header-list1">
-            <li> <a href="index.html"><b> Home</b> </a></li>
-            <li>
-                <a href="menu.html"> <b>Menu </b> </a>
-            </li>
+            <div class="heads">
+                <li> <a href="index.html"><b> Home</b> </a></li>
+                <li>
+                    <a href="menu.html"> <b>Menu </b> </a>
+                </li>
+            </div>
             <li class="logo1"><img src="logo.png" /></li>
             <li class="contact-item"> <b>Contact</b></li>
             </ul>
