--- a/menu.html
+++ b/menu.html
@@ -56,12 +56,33 @@
                     <h5> <i> all fruit tea flavours are available with Green or Black tea base. </i></h5>
                 </div>
             </div>
-
-
-
         </div>
 
-        <h6 class="textbox2"> (C)Big Orange London, Designed by Diane! </h6>
+        <h1 style="margin-top: 50px;" class="menu-item-title"> SMOOTHIES:</h1>
+        <h4 class="menu-bar1"> Regular: 4.99, Kids: 3.99 </h4>
+
+        <div class="mango">
+            <img src="./images/mango.png">
+        </div>
+
+
+        <div class="smoothie">
+            <div class="smoothie-overlay">
+
+                <div class="menu-item-content">
+                    <p> <b> Diamond Mango:  <br> fresh mango, diced mango topping </br> </b> </p>
+                    <p> <b> Everlasting Kale: <br> fresh kale, fresh spinach, fresh pineapple, fresh mango, fresh orange </br> </b> </p>
+                    <p> <b> Super Green: <br> fresh kale, fresh spinach, fresh pineapple, fresh mango, fresh orange, fresh banana</br> </b> </p>
+                    <p> <b> Strawberry Sunshine: <br> fresh srawberry, fresh banana </br> </b> </p>
+                    <p> <b> Very Berry:<br> fresh srawberry, fresh blueberry </br> </b> </p>
+                    <p> <b> Pink Lady: <br> fresh srawberry, fresh watermelon </br> </b> </p>
+                    <p> <b> Pina Colada: <br> fresh pineapple, coconut </br> </b> </p>
+                    <p> <b> Rainbow: <br> fresh mango, fresh pineapple, fresh srawberry, fresh banana </br> </b> </p>
+                    <p> <b> Tropic Sunrise: <br> fresh srawberry, fresh mango </br> </b> </p>
+                    <p> <b> Organic Acai: <br> fresh srawberry, fresh blueberry, fresh banana, oragnic acai </br> </b> </p>
+                    <h5> <i> all smoothies are available as a slush, without milk. </i></h5>
+
+                    <h6 class="textbox2"> (C)Big Orange London, Designed by Diane! </h6>
 
 </body>
 
