--- a/menu.html
+++ b/menu.html
@@ -58,17 +58,16 @@
             </div>
         </div>
 
-        <h1 style="margin-top: 50px;" class="menu-item-title"> SMOOTHIES:</h1>
-        <h4 class="menu-bar1"> Regular: 4.99, Kids: 3.99 </h4>
+        <div style="height: 400px;" class="mango">
 
-        <div class="mango">
-            <img src="./images/mango.png">
         </div>
+
 
 
         <div class="smoothie">
             <div class="smoothie-overlay">
-
+                <h1 style="margin-top: 50px;" class="menu-item-title"> SMOOTHIES:</h1>
+                <h4 class="menu-bar1"> Regular: 4.99, Kids: 3.99 </h4>
                 <div class="menu-item-content">
                     <p> <b> Diamond Mango:  <br> fresh mango, diced mango topping </br> </b> </p>
                     <p> <b> Everlasting Kale: <br> fresh kale, fresh spinach, fresh pineapple, fresh mango, fresh orange </br> </b> </p>
@@ -80,7 +79,18 @@
                     <p> <b> Rainbow: <br> fresh mango, fresh pineapple, fresh srawberry, fresh banana </br> </b> </p>
                     <p> <b> Tropic Sunrise: <br> fresh srawberry, fresh mango </br> </b> </p>
                     <p> <b> Organic Acai: <br> fresh srawberry, fresh blueberry, fresh banana, oragnic acai </br> </b> </p>
+                    <h2 class="menu-item-title"> Supplements: </h2>
+                    <p> <b> Protein, Chia Seeds, Multivitamin </b> </p>
                     <h5> <i> all smoothies are available as a slush, without milk. </i></h5>
+
+                    <h1 style="margin-top: 50px;" class="menu-item-title"> ICE CREAM BUBBLE TEA:</h1>
+                    <h4 class="menu-bar"> Regular: 5.99, Kids: 3.99 </h4>
+                    <p> <b> Oreo </b> </p>
+                    <p> <b> Vanilla </b> </p>
+                    <p> <b> Chocolate </b> </p>
+                    <p> <b> Green Tea </b> </p>
+                    <p> <b> Moose Tracks </b> </p>
+                    <p> <b> Strawberry Cheesecake </b> </p>
 
                     <h6 class="textbox2"> (C)Big Orange London, Designed by Diane! </h6>
 
