fixes and updates

--- a/menu.html
+++ b/menu.html
@@ -91,6 +91,16 @@
                     <p> <b> Green Tea </b> </p>
                     <p> <b> Moose Tracks </b> </p>
                     <p> <b> Strawberry Cheesecake </b> </p>
+                </div>
+            </div>
+        </div>
+
+        <div class="juice">
+            <div class="juice-overlay">
+                <h1 style="margin-top: 50px;" class="menu-item-title"> SMOOTH TEA:</h1>
+                <h4 class="menu-bar1"> Regular: 4.99, Kids: 3.99 </h4>
+                <div class="menu-item-content">
+
 
                     <h6 class="textbox2"> (C)Big Orange London, Designed by Diane! </h6>
 
