--- a/menu.html
+++ b/menu.html
@@ -100,7 +100,35 @@
                 <h1 style="margin-top: 50px;" class="menu-item-title"> SMOOTH TEA:</h1>
                 <h4 class="menu-bar1"> Regular: 4.99, Kids: 3.99 </h4>
                 <div class="menu-item-content">
+                    <p> <b> Taro </b> </p>
+                    <p> <b> Coconut </b> </p>
+                    <p> <b> Strawberry </b> </p>
+                    <p> <b> Honeydew </b> </p>
+                    <p> <b> Matcha </b> </p>
+                    <p> <b> Chocolate </b> </p>
+                    <p> <b> Lychee </b> </p>
+                    <p> <b> Peach </b> </p>
+                    <p> <b> Passionfruit </b> </p>
+                    <p> <b> Mocha </b> </p>
 
+                    <h1 style="margin-top: 50px;" class="menu-item-title"> FRESH JUICE:</h1>
+                    <h4 class="menu-bar"> Large: 6.99, Medium: 5.99, Kids: 4.99 </h4>
+                    <p> <b> Orange </b> </p>
+                    <p> <b> Apple </b> </p>
+                    <p> <b> Carrot </b> </p>
+                    <p> <b> Pineapple & Orange </b> </p>
+                    <p> <b> Orange & Banana </b> </p>
+                    <p> <b> Apple & Orange & Banana </b> </p>
+
+                    <h1 style="margin-top: 50px;" class="menu-item-title1"> TOPPINGS:</h1>
+                    <h4 class="menu-bar2">Each: 0.50 </h4>
+                    <p> <b> Tapioca </b> </p>
+                    <p> <b>   Pineapple Jelly </b> </p>
+                    <p> <b>  Rainbow Jelly </b> </p>
+                    <p> <b>  Mango Jelly </b> </p>
+                    <p> <b>   Green Apple Jelly </b> </p>
+                    <p> <b>    Lychee Jelly </b> </p>
+                    <h5 style="margin-bottom: 200px;"> <i> toppings are available for all drinks. </i></h5>
 
                     <h6 class="textbox2"> (C)Big Orange London, Designed by Diane! </h6>
 
