--- a/menu.html
+++ b/menu.html
@@ -129,8 +129,10 @@
                     <p> <b>   Green Apple Jelly </b> </p>
                     <p> <b>    Lychee Jelly </b> </p>
                     <h5 style="margin-bottom: 200px;"> <i> toppings are available for all drinks. </i></h5>
-
-                    <h6 class="textbox2"> (C)Big Orange London, Designed by Diane! </h6>
+                </div>
+            </div>
+        </div>
+        <h6 class="textbox2"> (C)Big Orange London, Designed by Diane! </h6>
 
 </body>
 
