Add menu items for veggies and fruits

--- a/menu.html
+++ b/menu.html
@@ -2,6 +2,7 @@
 
 <head>
     <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Work+Sans:400,500,700" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
     <link rel="icon" href="./images/orangelogo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -58,10 +59,61 @@
             </div>
         </div>
 
-        <div style="height: 400px;" class="mango">
-
+        <div style="height: 400px;" class="mango"></div>
+        <div class="smoothie-ingredients-section">
+            <div class="smoothie-ingredients-grid">
+                <div class="smoothie-ingredient-item" id="mango">
+                    <div class="smoothie-ingredient-item-overlay">
+                        <h4>Mango</h4>
+                    </div>
+                </div>
+                <div class="smoothie-ingredient-item" id="kale">
+                    <div class="smoothie-ingredient-item-overlay">
+                        <h4>Kale</h4>
+                    </div>
+                </div>
+                <div class="smoothie-ingredient-item" id="spinach">
+                    <div class="smoothie-ingredient-item-overlay">
+                        <h4>Spinach</h4>
+                    </div>
+                </div>
+                <div class="smoothie-ingredient-item" id="pineapple">
+                    <div class="smoothie-ingredient-item-overlay">
+                        <h4>Pineapple</h4>
+                    </div>
+                </div>
+                <div class="smoothie-ingredient-item" id="acai">
+                    <div class="smoothie-ingredient-item-overlay">
+                        <h4>Acai</h4>
+                    </div>
+                </div>
+                <div class="smoothie-ingredient-item" id="watermelon">
+                    <div class="smoothie-ingredient-item-overlay">
+                        <h4>watermelon</h4>
+                    </div>
+                </div>
+                <div class="smoothie-ingredient-item" id="blueberry">
+                    <div class="smoothie-ingredient-item-overlay">
+                        <h4>blueberry</h4>
+                    </div>
+                </div>
+                <div class="smoothie-ingredient-item" id="banana">
+                    <div class="smoothie-ingredient-item-overlay">
+                        <h4>Banana</h4>
+                    </div>
+                </div>
+                <div class="smoothie-ingredient-item" id="strawberry">
+                    <div class="smoothie-ingredient-item-overlay">
+                        <h4>Strawberry</h4>
+                    </div>
+                </div>
+                <div class="smoothie-ingredient-item" id="coconut">
+                    <div class="smoothie-ingredient-item-overlay">
+                        <h4>Coconut</h4>
+                    </div>
+                </div>
+            </div>
         </div>
-
 
 
         <div class="smoothie">
@@ -77,7 +129,7 @@
                     <p> <b> Pink Lady: <br> fresh srawberry, fresh watermelon </br> </b> </p>
                     <p> <b> Pina Colada: <br> fresh pineapple, coconut </br> </b> </p>
                     <p> <b> Rainbow: <br> fresh mango, fresh pineapple, fresh srawberry, fresh banana </br> </b> </p>
-                    <p> <b> Tropic Sunrise: <br> fresh srawberry, fresh mango </br> </b> </p>
+                    <p> <b> Tropic Sunrise: <br> fresh strawberry, fresh mango </br> </b> </p>
                     <p> <b> Organic Acai: <br> fresh srawberry, fresh blueberry, fresh banana, oragnic acai </br> </b> </p>
                     <h2 class="menu-item-title"> Supplements: </h2>
                     <p> <b> Protein, Chia Seeds, Multivitamin </b> </p>
@@ -104,6 +156,7 @@
 
                     <h6 class="textbox2"> (C)Big Orange London, Designed by Diane! </h6>
 
+                    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 </body>
 
 </html>
