--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <head>
     <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Work+Sans:400,500,700" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
     <link rel="icon" href="./images/orangelogo.png">
     <title> Big Orange London </title>
