--- a/home.html
+++ b/home.html
@@ -23,7 +23,7 @@
         </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-    <script src="main.js"></script>
+    <script src="scripts/home.js"></script>
 </body>
 
 </html>
