--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
                 <a href="menu.html"> <b>Menu </b> </a>
             </li>
             <li class="logo"><img src="logo.png" /></li>
-            <li class="contact-item"> <b>Contact</b></li>
+            <li class="contact-item">
+                <a href="contact.html"> <b>Contact</b></a>
+            </li>
         </ul>
     </div>
 
@@ -26,7 +28,7 @@
         </div>
     </div>
 
-    <h1 class="textbox"> Come find us! </h1>
+    <h1 class="textbox"> COME FIND US! </h1>
     <h5 class="textbox1" style="margin-top: -10px"> @ Masonville Place </h5>
     <h5 class="textbox1" style="margin-top: -20px"> London, ON </h5>
 
