--- a/menu.html
+++ b/menu.html
@@ -19,7 +19,9 @@
                 </li>
             </div>
             <li class="logo1"><img src="logo.png" /></li>
-            <li class="contact-item"> <b>Contact</b></li>
+            <li class="contact-item">
+                <a href="contact.html"> <b>Contact</b> </a>
+            </li>
             </ul>
         </div>
 
