--- a/contact.html
+++ b/contact.html
@@ -24,14 +24,16 @@
             </ul>
         </div>
 
-        <div class="store">
-            <div class="store-overlay">
-                <h1> <b> CONTACT US:</b></h1>
-                <h4> <br><a href="mailto:dianehuang_@hotmail.com"> bigorangelondon@gmail.com </a></br>
-                </h4>
-                <h4> 6478676677 </h4>
-                <h4> 1680 Richmond St, London, ON N6G 3Y9 </h4>
-
+        <div class="contact-container">
+            <div class="contact-overlay">
+                <div>
+                    <h1>Contact us:</h1>
+                    <a href="mailto:dianehuang_@hotmail.com">
+                        <h4>bigorangelondon@gmail.com</h4>
+                    </a>
+                    <h4>6478676677</h4>
+                    <h4>1680 Richmond St, London, ON N6G 3Y9</h4>
+                </div>
             </div>
         </div>
 
