--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
 
 <head>
     <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Work+Sans:400,500,700" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
     <link rel="icon" href="./images/orangelogo.png">
     <title> Big Orange London </title>
@@ -28,7 +29,7 @@
             <div class="contact-overlay">
                 <div>
                     <h1>Contact us:</h1>
-                    <a href="mailto:dianehuang_@hotmail.com">
+                    <a class="email-link" href="mailto:dianehuang_@hotmail.com">
                         <h4>bigorangelondon@gmail.com</h4>
                     </a>
                     <h4>6478676677</h4>
