--- a/menu.html
+++ b/menu.html
@@ -30,9 +30,7 @@
                 <!-- Remember to put it in the overlay, not just to create it! !-->
                 <h1 class="menu-item-title"> MILK TEA:</h1>
                 <div class="menu-item-content">
-                    <!-- Remember that bold is not <br>! it's <b>! !-->
-
-                    <h4 class="menu-bar"> Regular: 4.99 </h4>
+                    <h4 class="menu-bar"> Regular: 4.29 </h4>
                     <p> <b> Original Milk Black Tea </b> </p>
                     <p> <b> Jasmine Milk Green Tea </b> </p>
                     <p> <b> Taro </b> </p>
@@ -44,7 +42,7 @@
                     <p> <b> Honeydew </b> </p>
 
                     <h1 style="margin-top: 50px;" class="menu-item-title"> FRUIT TEA:</h1>
-                    <h4 class="menu-bar"> Regular: 4.49, Kids: 3.49 </h4>
+                    <h4 class="menu-bar"> Regular: 4.29, Kids: 3.49 </h4>
                     <p> <b> Jasmine Green </b> </p>
                     <p> <b> Honey </b> </p>
                     <p> <b> Mango </b> </p>
@@ -121,7 +119,7 @@
         <div class="smoothie">
             <div class="smoothie-overlay">
                 <h1 style="margin-top: 50px;" class="menu-item-title"> SMOOTHIES:</h1>
-                <h4 class="menu-bar1"> Regular: 4.99, Kids: 3.99 </h4>
+                <h4 class="menu-bar1"> Regular: 5.29, Kids: 3.99 </h4>
                 <div class="menu-item-content">
                     <p> <b> Diamond Mango:  <br> fresh mango, diced mango topping </br> </b> </p>
                     <p> <b> Everlasting Kale: <br> fresh kale, fresh spinach, fresh pineapple, fresh mango, fresh orange </br> </b> </p>
@@ -149,10 +147,11 @@
             </div>
         </div>
 
+
         <div class="juice">
             <div class="juice-overlay">
                 <h1 style="margin-top: 50px;" class="menu-item-title"> SMOOTH TEA:</h1>
-                <h4 class="menu-bar1"> Regular: 4.99, Kids: 3.99 </h4>
+                <h4 class="menu-bar1"> Regular: 4.59, Kids: 3.99 </h4>
                 <div class="menu-item-content">
                     <p> <b> Taro </b> </p>
                     <p> <b> Coconut </b> </p>
@@ -165,6 +164,7 @@
                     <p> <b> Passionfruit </b> </p>
                     <p> <b> Mocha </b> </p>
 
+
                     <h1 style="margin-top: 50px;" class="menu-item-title"> FRESH JUICE:</h1>
                     <h4 class="menu-bar"> Large: 6.99, Medium: 5.99, Kids: 4.99 </h4>
                     <p> <b> Orange </b> </p>
@@ -174,21 +174,28 @@
                     <p> <b> Orange & Banana </b> </p>
                     <p> <b> Apple & Orange & Banana </b> </p>
 
+
+                    <h1 style="margin-top: 50px;" class="menu-item-title"> HOUSE SPECIAL:</h1>
+                    <h4 class="menu-bar"> </h4>
+                    <p> <b> Honey Milk Tea: $3.99 </b> </p>
+                    <p> <b> Pina Colada Smoothie: $4.99 </b> </p>
+
                     <h1 style="margin-top: 50px;" class="menu-item-title1"> TOPPINGS:</h1>
-                    <h4 class="menu-bar2">Each: 0.50 </h4>
+                    <h4 style="margin-bottom:40px" class="menu-bar2">Each: 0.50 </h4>
                     <p> <b> Tapioca </b> </p>
-                    <p> <b>   Pineapple Jelly </b> </p>
+                    <p> <b>  Pineapple Jelly </b> </p>
                     <p> <b>  Rainbow Jelly </b> </p>
                     <p> <b>  Mango Jelly </b> </p>
-                    <p> <b>   Green Apple Jelly </b> </p>
-                    <p> <b>    Lychee Jelly </b> </p>
+                    <p> <b>  Green Apple Jelly </b> </p>
+                    <p> <b>  Lychee Jelly </b> </p>
                     <h5 style="margin-bottom: 200px;"> <i> toppings are available for all drinks. </i></h5>
                 </div>
             </div>
         </div>
+
         <h6 class="textbox2"> (C)Big Orange London, Designed by Diane! </h6>
 
-                    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 </body>
 
 </html>
