--- a/menu.html
+++ b/menu.html
@@ -18,48 +18,118 @@
                     <a href="menu.html"> <b>Menu </b> </a>
                 </li>
             </div>
-            <li class="logo1"><img src="logo.png" /></li>
+            <li class="logo menu"><img src="logo.png" /></li>
             <li class="contact-item">
                 <a href="contact.html"> <b>Contact</b> </a>
             </li>
             </ul>
         </div>
+        <div class="column left menu-section">
+            <div class="spacer"></div>
+            <div class="menu-content">
+                <ul class="items-list smooth-teas">
+                    <li>
+                        <h5>Jasmine green</h5>
+                    </li>
+                    <li>
+                        <h5>Honey</h5>
+                    </li>
+                    <li>
+                        <h5>Mango</h5>
+                    </li>
+                    <li>
+                        <h5>Lychee</h5>
+                    </li>
+                    <li>
+                        <h5>Green Apple</h5>
+                    </li>
+                    <li>
+                        <h5>Passionfruit</h5>
+                    </li>
+                    <li>
+                        <h5>Peach</h5>
+                    </li>
+                    <li>
+                        <h5>Lemon</h5>
+                    </li>
+                    <li>
+                        <h5>Passionfruit and Lemon</h5>
+                    </li>
+                    <li>
+                        <h5>Peach and Lemon</h5>
+                    </li>
+                </ul>
+            </div>
 
-        <div class="bbt">
-            <div class="bbt-overlay">
-                <!-- Remember to put it in the overlay, not just to create it! !-->
-                <h1 class="menu-item-title"> MILK TEA:</h1>
-                <div class="menu-item-content">
-                    <h4 class="menu-bar"> Regular: 4.29 </h4>
-                    <p> <b> Original Milk Black Tea </b> </p>
-                    <p> <b> Jasmine Milk Green Tea </b> </p>
-                    <p> <b> Taro </b> </p>
-                    <p> <b> Coffee </b> </p>
-                    <p> <b> Coconut </b> </p>
-                    <p> <b> Chocolate </b> </p>
-                    <p> <b> Strawberry </b> </p>
-                    <p> <b> Honey </b> </p>
-                    <p> <b> Honeydew </b> </p>
-
-                    <h1 style="margin-top: 50px;" class="menu-item-title"> FRUIT TEA:</h1>
-                    <h4 class="menu-bar"> Regular: 4.29, Kids: 3.49 </h4>
-                    <p> <b> Jasmine Green </b> </p>
-                    <p> <b> Honey </b> </p>
-                    <p> <b> Mango </b> </p>
-                    <p> <b> Lychee </b> </p>
-                    <p> <b> Green Apple </b> </p>
-                    <p> <b> Passionfruit </b> </p>
-                    <p> <b> Peach </b> </p>
-                    <p> <b> Lemon </b> </p>
-                    <p> <b> Passionfruit & Lemon </b> </p>
-                    <p> <b> Peach & Lemon </b> </p>
-
-                    <h5> <i> all fruit tea flavours are available with Green or Black tea base. </i></h5>
+            <div class="menu-title right">
+                <h4>Fruit Tea</h4>
+                <div class="divider"></div>
+                <span>Tea infused with fruity flavours</span>
+                <div class="pricing pricing-first">
+                    <span class="bold">Kids</span>
+                    <span>$3.49</span>
                 </div>
+                <div class="pricing">
+                    <span class="bold">Regular</span>
+                    <span>$4.29</span>
+                </div>
+                <div class="pricing foot-note">
+                    <span>All Fruit teas are available with black or green tea base.</span>
+                </div>
+                <div class="color-circle purple"></div>
             </div>
         </div>
 
-        <div style="height: 400px;" class="mango"></div>
+        <div class="parallax-container bbt"></div>
+        
+        <div class="column menu-section">
+             <div class="menu-title">
+                <h4>Milk Tea</h4>
+                <div class="divider"></div>
+                <span>Milk with tea</span>
+                <div class="pricing pricing-first">
+                    <span class="bold">Regular</span>
+                    <span>$4.29</span>
+                </div>
+                <div class="color-circle right orange"></div>
+            </div>
+            <div class="spacer"></div>
+            <div class="menu-content">
+                <ul class="items-list">
+                    <li>
+                        <h5>Original Milk Black tea</h5>
+                    </li>
+                    <li>
+                        <h5>Jasmine Milk Green Tea</h5>
+                    </li>
+                    <li>
+                        <h5>Taro</h5>
+                    </li>
+                    <li>
+                        <h5>Coffee</h5>
+                    </li>
+                    <li>
+                        <h5>Coconut</h5>
+                    </li>
+                    <li>
+                        <h5>Chocolate</h5>
+                    </li>
+                    <li>
+                        <h5>Strawberry</h5>
+                    </li>
+                    <li>
+                        <h5>Honey</h5>
+                    </li>
+                    <li>
+                        <h5>Honeydew</h5>
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="parallax-container mango">
+        </div>
+
         <div class="smoothie-ingredients-section">
             <div class="smoothie-ingredients-grid">
                 <div class="smoothie-ingredient-item" id="mango">
@@ -115,7 +185,7 @@
             </div>
         </div>
 
-        <div class="column">
+        <div class="column menu-section">
             <div class="menu-title">
                 <h4>Smoothies</h4>
                 <div class="divider"></div>
@@ -128,134 +198,205 @@
                     <span class="bold">Regular</span>
                     <span>$4.99</span>
                 </div>
-                <div class="color-circle"></div>
+                <div class="color-circle orange"></div>
             </div>
 
 
             <div class="menu-content">
-                <ul class="smoothie-list">
+                <div class="touch-indicator">
+                    <img class="touch-indicator-image" src="images/touch.png">                    
+                    <span>Hint! Click the menu items to see their ingredients above.</span>
+                </div>
+                <ul class="items-list" id="smoothie-menu">
                     <li data-item="diamond-mango">
                         <h5>Diamond Mango</h5>
                         <span>fresh mango, diced mango topping</span>
                     </li>
                     <li data-item="everlasting-kale">
                         <h5>Everlasting Kale</h5>
-                        <span>fresh kale, fresh spinach, fresh pineapple, fresh mango, fresh orange</span>
+                        <span>fresh kale, spinach, pinapple, mango, orange</span>
                     </li>
-                    <li data-item="diamond-mango">
+                    <li data-item="super-green">
                         <h5>Super Green</h5>
-                        <span>fresh mango, diced mango topping </span>
+                        <span>fresh kale, spinach, pineapple, mango, orange, banana</span>
                     </li>
-                    <li data-item="diamond-mango">
+                    <li data-item="strawberry-sunshine">
                         <h5>Strawberry Sunshine</h5>
-                        <span>fresh mango, diced mango topping </span>
+                        <span>fresh strawberry, fresh banana</span>
                     </li>
-                    <li data-item="diamond-mango">
+                    <li data-item="very-berry">
                         <h5>Very Berry</h5>
-                        <span>fresh mango, diced mango topping </span>
+                        <span>fresh strawberry, fresh blueberry</span>
                     </li>
-                    <li data-item="diamond-mango">
-                        <h5>Diamond Mango</h5>
-                        <span>fresh mango, diced mango topping </span>
+                    <li data-item="pink-lady">
+                        <h5>Pink Lady</h5>
+                        <span>fresh strawberry, fresh watermelon</span>
                     </li>
-                    <li data-item="diamond-mango">
-                        <h5>Diamond Mango</h5>
-                        <span>fresh mango, diced mango topping </span>
+                    <li data-item="pina-colada">
+                        <h5>Pina Colada</h5>
+                        <span>fresh pineapple, coconut</span>
                     </li>
-                    <li data-item="diamond-mango">
-                        <h5>Diamond Mango</h5>
-                        <span>fresh mango, diced mango topping </span>
+                    <li data-item="rainbow">
+                        <h5>Rainbow</h5>
+                        <span>fresh mango, pineapple, strawberry, banana</span>
+                    </li>
+                    <li data-item="tropic-sunrise">
+                        <h5>Tropic Sunrise</h5>
+                        <span>fresh strawberry, fresh mango</span>
+                    </li>
+                    <li data-item="organic-acai">
+                        <h5>Organic Acai</h5>
+                        <span>fresh srawberry, fresh blueberry, fresh banana, oragnic acai</span>
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="parallax-container smoothie">
+            <div class="parallax-intro">
+                <h6 class="parallax-intro-header">
+                    Our smoothies are <em>fresh</em>, <em>healthy</em> and <em>tasty</em>.
+                </h6>
+                <p class="parallax-intro-copy">Made with only fresh fruits and the best quality ingredients, our smoothies are healthy, delicious and energizing.</p>
+            </div>
+        </div>
+
+        <div class="column left menu-section">
+            <div class="spacer"></div>
+            <div class="menu-content">
+                <ul class="items-list smooth-teas">
+                    <li>
+                        <h5>Taro</h5>
+                    </li>
+                    <li>
+                        <h5>Coconut</h5>
+                    </li>
+                    <li>
+                        <h5>Strawberry</h5>
+                    </li>
+                    <li>
+                        <h5>Honeydew</h5>
+                    </li>
+                    <li>
+                        <h5>Matcha</h5>
+                    </li>
+                    <li>
+                        <h5>Chocolate</h5>
+                    </li>
+                    <li>
+                        <h5>Lychee</h5>
+                    </li>
+                    <li>
+                        <h5>Passionfruit</h5>
+                    </li>
+                    <li>
+                        <h5>Mocha</h5>
                     </li>
                 </ul>
             </div>
 
-        </div>
-
-
-        <div class="smoothie">
-            <div class="smoothie-overlay">
-                <h1 style="margin-top: 50px;" class="menu-item-title"> SMOOTHIES:</h1>
-                <h4 class="menu-bar1"> Regular: 4.99, Kids: 3.99 </h4>
-                <div class="menu-item-content" id="smoothie-menu">
-                    <p data-item="diamond-mango"> <b> Diamond Mango:  <br> fresh mango, diced mango topping </br> </b> </p>
-                    <p data-item="everlasting-kale"> <b> Everlasting Kale: <br> fresh kale, fresh spinach, fresh pineapple, fresh mango, fresh orange </br> </b> </p>
-                    <p data-item="super-green"> <b> Super Green: <br> fresh kale, fresh spinach, fresh pineapple, fresh mango, fresh orange, fresh banana</br> </b> </p>
-                    <p data-item="strawberry-sunshine"> <b> Strawberry Sunshine: <br> fresh strawberry, fresh banana </br> </b> </p>
-                    <p data-item="very-berry"> <b> Very Berry:<br> fresh strawberry, fresh blueberry </br> </b> </p>
-                    <p data-item="pink-lady"> <b> Pink Lady: <br> fresh strawberry, fresh watermelon </br> </b> </p>
-                    <p data-item="pina-colada"> <b> Pina Colada: <br> fresh pineapple, coconut </br> </b> </p>
-                    <p data-item="rainbow"> <b> Rainbow: <br> fresh mango, fresh pineapple, fresh srawberry, fresh banana </br> </b> </p>
-                    <p data-item="tropic-sunrise"> <b> Tropic Sunrise: <br> fresh strawberry, fresh mango </br> </b> </p>
-                    <p data-item="organic-acai"> <b> Organic Acai: <br> fresh srawberry, fresh blueberry, fresh banana, oragnic acai </br> </b> </p>
-                    <h2 class="menu-item-title"> Supplements: </h2>
-                    <p> <b> Protein, Chia Seeds, Multivitamin </b> </p>
-                    <h5> <i> all smoothies are available as a slush, without milk. </i></h5>
-
-                    <h1 style="margin-top: 50px;" class="menu-item-title"> ICE CREAM BUBBLE TEA:</h1>
-                    <h4 class="menu-bar"> Regular: 5.99, Kids: 3.99 </h4>
-                    <p> <b> Oreo </b> </p>
-                    <p> <b> Vanilla </b> </p>
-                    <p> <b> Chocolate </b> </p>
-                    <p> <b> Green Tea </b> </p>
-                    <p> <b> Moose Tracks </b> </p>
-                    <p> <b> Strawberry Cheesecake </b> </p>
+            <div class="menu-title right">
+                <h4>Smooth Teas</h4>
+                <div class="divider"></div>
+                <span>Smoothies with bubble tea.</span>
+                <div class="pricing pricing-first">
+                    <span class="bold">Kids</span>
+                    <span>$3.99</span>
                 </div>
+                <div class="pricing">
+                    <span class="bold">Regular</span>
+                    <span>$4.59</span>
+                </div>
+                <div class="color-circle purple"></div>
             </div>
         </div>
 
-
-        <div class="juice">
-            <div class="juice-overlay">
-                <h1 style="margin-top: 50px;" class="menu-item-title"> SMOOTH TEA:</h1>
-                <h4 class="menu-bar1"> Regular: 4.59, Kids: 3.99 </h4>
-                <div class="menu-item-content">
-                    <p> <b> Taro </b> </p>
-                    <p> <b> Coconut </b> </p>
-                    <p> <b> Strawberry </b> </p>
-                    <p> <b> Honeydew </b> </p>
-                    <p> <b> Matcha </b> </p>
-                    <p> <b> Chocolate </b> </p>
-                    <p> <b> Lychee </b> </p>
-                    <p> <b> Peach </b> </p>
-                    <p> <b> Passionfruit </b> </p>
-                    <p> <b> Mocha </b> </p>
-
-
-                    <h1 style="margin-top: 50px;" class="menu-item-title"> FRESH JUICE:</h1>
-                    <h4 class="menu-bar"> Large: 6.99, Medium: 5.99, Kids: 4.99 </h4>
-                    <p> <b> Orange </b> </p>
-                    <p> <b> Apple </b> </p>
-                    <p> <b> Carrot </b> </p>
-                    <p> <b> Pineapple & Orange </b> </p>
-                    <p> <b> Orange & Banana </b> </p>
-                    <p> <b> Apple & Orange & Banana </b> </p>
-
-
-                    <h1 style="margin-top: 50px;" class="menu-item-title"> HOUSE SPECIAL:</h1>
-                    <h4 class="menu-bar"> </h4>
-                    <p> <b> Honey Milk Tea: $3.99 </b> </p>
-                    <p> <b> Pina Colada Smoothie: $4.99 </b> </p>
-
-                    <h1 style="margin-top: 50px;" class="menu-item-title1"> TOPPINGS:</h1>
-                    <h4 style="margin-bottom:40px" class="menu-bar2">Each: 0.50 </h4>
-                    <p> <b> Tapioca </b> </p>
-                    <p> <b>  Pineapple Jelly </b> </p>
-                    <p> <b>  Rainbow Jelly </b> </p>
-                    <p> <b>  Mango Jelly </b> </p>
-                    <p> <b>  Green Apple Jelly </b> </p>
-                    <p> <b>  Lychee Jelly </b> </p>
-                    <h5 style="margin-bottom: 200px;"> <i> toppings are available for all drinks. </i></h5>
+        <div class="column menu-section">
+             <div class="menu-title">
+                <h4>Fresh Juices</h4>
+                <div class="divider"></div>
+                <span>Squeezed in store with fresh fruit.</span>
+                <div class="pricing pricing-first">
+                    <span class="bold">Kids</span>
+                    <span>$3.99</span>
                 </div>
+                <div class="pricing">
+                    <span class="bold">Medium</span>
+                    <span>$5.99</span>
+                </div>
+                <div class="pricing">
+                    <span class="bold">Large</span>
+                    <span>$6.99</span>
+                </div>
+                <div class="color-circle right pink"></div>
+            </div>
+            <div class="spacer"></div>
+            <div class="menu-content">
+                <ul class="items-list">
+                    <li>
+                        <h5>Orange</h5>
+                    </li>
+                    <li>
+                        <h5>Apple</h5>
+                    </li>
+                    <li>
+                        <h5>Carrot</h5>
+                    </li>
+                    <li>
+                        <h5>Pineapple and Orange</h5>
+                    </li>
+                    <li>
+                        <h5>Orange and Banana</h5>
+                    </li>
+                    <li>
+                        <h5>Apple and Orange and Banana</h5>
+                    </li>
+                </ul>
             </div>
         </div>
 
+        <div class="parallax-container juice"></div>        
+
+        <div class="column left menu-section">
+            <div class="spacer"></div>
+            <div class="menu-content">
+                <ul class="items-list smooth-teas">
+                    <li>
+                        <h5>Tapioca</h5>
+                    </li>
+                    <li>
+                        <h5>Pineapple Jelly</h5>
+                    </li>
+                    <li>
+                        <h5>Rainbow Jelly</h5>
+                    </li>
+                    <li>
+                        <h5>Mango Jelly</h5>
+                    </li>
+                    <li>
+                        <h5>Green Apple Jelly</h5>
+                    </li>
+                    <li>
+                        <h5>Lychee Jelly</h5>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="menu-title right">
+                <h4>Toppings</h4>
+                <div class="divider"></div>
+                <span>Add Toppings to any drink to add some fun in your drink!</span>
+                <div class="pricing pricing-first">
+                    <span class="bold">Each</span>
+                    <span>$0.50</span>
+                </div>
+                <div class="color-circle green"></div>
+            </div>
+        </div>
         <h6 class="textbox2"> (C)Big Orange London, Designed by Diane! </h6>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-<<<<<<< HEAD
-=======
         <script src="scripts/menu.js"></script>
->>>>>>> wip
 </body>
 
 </html>
