--- a/contact.html
+++ b/contact.html
@@ -29,8 +29,8 @@
             <div class="contact-overlay">
                 <div>
                     <h1>Contact us:</h1>
-                    <a class="email-link" href="mailto:dianehuang_@hotmail.com">
-                        <h4>bigorangelondon@gmail.com</h4>
+                    <a class="email-link" href="mailto:londonbigorange@gmail.com">
+                        <h4>londonbigorange@gmail.com</h4>
                     </a>
                     <h4>6478676677</h4>
                     <h4>1680 Richmond St, London, ON N6G 3Y9</h4>
