--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
                     <a href="menu.html"> <b>Menu </b> </a>
                 </li>
             </div>
-            <li class="logo1"><img src="logo.png" /></li>
+            <li class="logo no-back"><img src="logo.png" /></li>
             <li class="contact-item">
                 <a href="contact.html"> <b>Contact</b> </a>
             </li>
@@ -32,7 +32,7 @@
                     <a class="email-link" href="mailto:londonbigorange@gmail.com">
                         <h4>londonbigorange@gmail.com</h4>
                     </a>
-                    <h4>6478676677</h4>
+                    <h4>519-601-8366</h4>
                     <h4>1680 Richmond St, London, ON N6G 3Y9</h4>
                 </div>
             </div>
