--- a/menu.html
+++ b/menu.html
@@ -18,7 +18,7 @@
                     <a href="menu.html"> <b>Menu </b> </a>
                 </li>
             </div>
-            <li class="logo menu"><img src="logo.png" /></li>
+            <li class="logo no-back"><img src="logo.png" /></li>
             <li class="contact-item">
                 <a href="contact.html"> <b>Contact</b> </a>
             </li>
